tests/sksl/errors/LastFragColorWithoutCaps.glsl
### Compilation failed:

error: 2: sk_LastFragColor requires framebuffer fetch support
1 error
